--- a/formulario.html
+++ b/formulario.html
@@ -54,13 +54,13 @@
       </div>
       <div>
         <label for="txtCelular">Telefono/Celular</label>
-        <input type="tel" name="celular" id="txtCelular" maxlength="9" required>
+        <input type="tel" name="celular" id="txtCelular" maxlength="9" required placeholder="Ingrese su Telefono/celular aqui">
       </div>
 
       <div>
         <label for="txtDireccion1">Dirección</label>
-        <input type="text" name="direccion1" id="txtDireccion1" required><br>
-        <input type="text" name="direccion2" id="txtDireccion2">
+        <input type="text" name="direccion1" id="txtDireccion1" required placeholder="Ingrese su Dirección aqui"><br>
+        <input type="text" name="direccion2" id="txtDireccion2" placeholder="Ingrese su Dirección aqui(Opcional)">
       </div>
       <div>
         <input type="checkbox" id="Aceptar" required>
