--- a/index.html
+++ b/index.html
@@ -89,6 +89,42 @@
       </p>
       <button>Agregar al carrito</button>
     </article>
+    <article>
+      <img class="imgProduct" src="imagenes/cafetera.jpg" alt="Cafetera">
+      <h3>Cafetera automática</h3>
+      <p>
+        <span class="precioOriginal">S/ 200.00</span> <span class="precioDescuento">-10%</span>
+        <br><span class="precioFinal">S/ 180.00</span>
+      </p>
+      <button>Agregar al carrito</button>
+    </article>
+    <article>
+      <img class="licuadora" src="imagenes/licuadora.jpg" alt="Licuadora" class="">
+      <h3>Licuadora Oster con vaso de vidrio y control de perilla</h3>
+      <p>
+        <span class="precioOriginal">S/ 219.00</span> <span class="precioDescuento">-25%</span>
+        <br><span class="precioFinal">S/ 186.00</span>
+      </p>
+      <button>Agregar al carrito</button>
+    </article>
+    <article>
+      <img class="imgProduct" src="imagenes/procesador.jpg" alt="Procesador">
+      <h3>Procesador de alimentos</h3>
+      <p>
+        <span class="precioOriginal">S/ 499.00</span> <span class="precioDescuento">-40%</span>
+        <br><span class="precioFinal">S/ 299.00</span>
+      </p>
+      <button>Agregar al carrito</button>
+    </article>
+    <article>
+      <img class="imgProduct" src="imagenes/bandejas.jpg" alt="bandejas">
+      <h3>Procesador de alimentos</h3>
+      <p>
+        <span class="precioOriginal">S/ 89.00</span> <span class="precioDescuento">-10%</span>
+        <br><span class="precioFinal">S/ 79.00</span>
+      </p>
+      <button>Agregar al carrito</button>
+    </article>
   </main>
   <!-- Agrega más productos según sea necesario -->
   <footer>© Creado por Sebastian Horna Niño</footer>
