--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <header>
     <h1>Culinova</h1>
     <h2>Productos de Calidad para tu cocina</h2>
+    <a href="formulario.html">Crear una Cuenta</a>
   </header>
-
   <main class="Productos">
     <!-- Articulo 01 -->
     <article>
