--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <button>Agregar al carrito</button>
     </article>
     <article>
-      <img class="licuadora" src="imagenes/licuadora.jpg" alt="Licuadora" class="">
+      <img class="imgProduct" src="imagenes/licuadora.jpg" alt="Licuadora">
       <h3>Licuadora Oster con vaso de vidrio y control de perilla</h3>
       <p>
         <span class="precioOriginal">S/ 219.00</span> <span class="precioDescuento">-25%</span>
